changing image size

--- a/Assign1/index.html
+++ b/Assign1/index.html
@@ -19,15 +19,14 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="#">Project</a></li>
-                <li>4th li</li>
+                <li><a href="#">Project</a></li>               
             </ul>
         </nav>
     
 
         <!-- This is my image section -->
         <div class="image">
-            <img src="image/myPhtoto.png" alt="myphoyo">
+            <img src="image/myPhtoto.png" alt="myphoto">
         </div>
 
         <!-- This is about me -->
