adding admin dash board project to project title

--- a/Assign1/index.html
+++ b/Assign1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NCC Asign1</title>
+    <title>NCC Assign1</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/07516f3cbc.js"></script>
     <link rel="stylesheet" href="css/style.css">
@@ -17,9 +17,9 @@
         <nav>
             <img src="image/myPhtoto.png" alt="this is my logo" class="display-sm-hide">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Project</a></li>               
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#">AboutMe</a></li>
+                <li><a href="./adminDashBoardProject/index.html">Project</a></li>               
             </ul>
         </nav>
     
