maintain some text

--- a/Assign1/index.html
+++ b/Assign1/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="page">
 
-        <nav>
+        <nav class="bg-dark">
             <img src="image/myPhtoto.png" alt="this is my logo" class="display-sm-hide">
             <ul>
                 <li class="active"><a href="#">Home</a></li>
@@ -27,7 +27,7 @@
         
         <!-- This is about me -->
         <div class="text col-md-6 col-sm-12">
-            <h1 class="h-3">Hello I'm <span>Wai Yan Thu Rein</span></h1>
+            <h1 class="h-3">Hello <br> I'm <span>Wai Yan Thu Rein</span></h1>
             <p>I made this single-page web for <br><span>National Cyber City</span>Assignment 1.</p>
             <p> This may be my <b>future portfolio.</b> </p>
             <button class="btn btn-primary">Download my CV</button>
