--- a/Assign1/adminDashBoardProject/index.html
+++ b/Assign1/adminDashBoardProject/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/07516f3cbc.js"></script>
     <title>Adamin Dash Board</title>
@@ -102,11 +103,11 @@
                 <div class="container-fluid mt-3 p-4">
                     <div class="row mb-3">
                         <div class="col">
-                            <div class="alert alert-info">
+                            <div class="alert alert-info" id="dreply">
                                 <i class="fas fa-download me-2"></i>
                                  A new version of admin
                                 dashboard is released. 
-                                <a href="#">Download Now!</a>
+                                <button class="btn btn-dark" id="download"><a href="#">Download Now!</a></button>
                             </div>
                         </div>
                     </div>
@@ -264,6 +265,6 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
-
+    <script src="script.js"></script>
 </body>
 </html>
