--- a/Assign1/index.html
+++ b/Assign1/index.html
@@ -17,7 +17,7 @@
         <nav class="bg-dark">
             <img src="image/myPhtoto.png" alt="this is my logo" class="display-sm-hide">
             <ul>
-                <li class="active"><a href="#">Home</a></li>
+                <li class="active"><i class="fa-solid fa-house"></i><a href="#">Home</a></li>
                 <li><a href="#">AboutMe</a></li>
                 <li><a href="./adminDashBoardProject/index.html">Project</a></li>               
             </ul>
